probando en cambiar el nombre de la categoria

--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -17,7 +17,7 @@
             <div class="contenedorGlobal row">
                 <aside class="contenedorAside d-flex flex-column justify-content-between col-3" id="seccionCategorias">
                     <div>
-                        <h1 class="tituloAside text-center fw-bold">Categorías</h1>
+                        <h1 class="tituloAside text-center fw-bold">Categorías del carrito</h1>
                     </div>
                     <div class="contenedorUl">
                         <ul class="d-flex flex-column gap-4 text-center">
