--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -6,6 +6,7 @@
     <title>Carrito</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/carrito.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
@@ -40,17 +41,27 @@
                         
                     </div> -->
                     <div class="contenedorCarrito d-flex flex-column gap-4">
-                        <div class="bg-black contenedorCarritoDivs">
-                            <h1>y</h1>
-                        </div>
-                        <div class="bg-black contenedorCarritoDivs">
-                            <h1>y</h1>
-                        </div>
-                        <div class="bg-black contenedorCarritoDivs">
-                            <h1>y</h1>
-                        </div>
-                        <div class="bg-black contenedorCarritoDivs">
-                            <h1>y</h1>
+                        <div class=" contenedorCarritoDivs d-flex justify-content-between">
+                            <div>
+                                <img style="width: 4rem" src="../img/camisas/camisa 1.jpeg" alt="">
+                            </div>
+                            <div class="my-auto">
+                                <small>titulo</small>
+                                <p>aaaa</p>
+                            </div>
+                            <div class="my-auto">
+                                <small>cantidad</small>
+                                <p>0</p>
+                            </div>
+                            <div class="my-auto">
+                                <small>preio</small>
+                                <p>1000</p>
+                            </div>
+                            <div class="my-auto">
+                                <small>subtotal</small>
+                                <p>0</p>
+                            </div>
+                            <button class="small"><i class="bi bi-trash"></i></button>
                         </div>
                     </div>
                 </div>
