solo acomode cosas y agregué un archivo js de carrito

--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -43,7 +43,7 @@
                     <div class="contenedorCarrito d-flex flex-column gap-4">
                         <div class=" contenedorCarritoDivs d-flex justify-content-between">
                             <div>
-                                <img style="width: 4rem" src="../img/camisas/camisa 1.jpeg" alt="">
+                                <img id="imgCarrito" style="width: 4rem" src="../img/camisas/camisa 1.jpeg" alt="">
                             </div>
                             <div class="my-auto">
                                 <small>titulo</small>
@@ -61,7 +61,30 @@
                                 <small>subtotal</small>
                                 <p>0</p>
                             </div>
-                            <button class="small"><i class="bi bi-trash"></i></button>
+                            <button id="botonEliminar" class="small my-auto"><i id="iconoEliminar" class="bi bi-trash"></i></button>
+                        </div>
+
+                        <div class=" contenedorCarritoDivs d-flex justify-content-between">
+                            <div>
+                                <img id="imgCarrito" style="width: 4rem" src="../img/camisas/camisa 1.jpeg" alt="">
+                            </div>
+                            <div class="my-auto">
+                                <small>titulo</small>
+                                <p>aaaa</p>
+                            </div>
+                            <div class="my-auto">
+                                <small>cantidad</small>
+                                <p>0</p>
+                            </div>
+                            <div class="my-auto">
+                                <small>preio</small>
+                                <p>1000</p>
+                            </div>
+                            <div class="my-auto">
+                                <small>subtotal</small>
+                                <p>0</p>
+                            </div>
+                            <button id="botonEliminar" class="small my-auto"><i id="iconoEliminar" class="bi bi-trash"></i></button>
                         </div>
                     </div>
                 </div>
