--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
     </footer>
 
     
+
+    <script src="./js/carrito.js"></script>
     <script src="./js/arrayProductos.js"></script>
     <script type="module" src="./js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
