--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,7 @@
             <div class="contenedorGlobal row">
                 <aside class="contenedorAside d-flex flex-column justify-content-between col-3" id="seccionCategorias">
                     <div>
-                        <h1 class="tituloAside text-center fw-bold">Categorías del carrito</h1>
+                        <h1 class="tituloAside text-center fw-bold">TiendaShop</h1>
                     </div>
                     <div class="contenedorUl">
                         <ul class="d-flex flex-column gap-4 text-center">
@@ -26,7 +26,7 @@
                                 <button id="sacos" class="asideBotones active">Su carrito</button>
                             </li>
                             <li>
-                                <button class=" btn btn-warning" id="todos"><a href="../index.html">Volver al inicio</a></button>
+                                <button class=" btn btn-warning" id="todos"><a id="volverAlInicio" href="../index.html">Volver al inicio</a></button>
                             </li>
                         </ul>
                     </div>
@@ -36,55 +36,10 @@
                 </aside>
                 <div class="contenedorDiv col-9 p-3" id="seccionRopa">
                     <h2 class="tituloDiv text-center">Carrito</h2>
-                    <small class="textoCarritoVacio">Su carrito esta vacio.</small>
-                    <!-- <div class="contenedorCards d-flex flex-wrap justify-content-center gap-5 mt-4">
-                        
-                    </div> -->
-                    <div class="contenedorCarrito d-flex flex-column gap-4">
-                        <div class=" contenedorCarritoDivs d-flex justify-content-between">
-                            <div>
-                                <img id="imgCarrito" style="width: 4rem" src="../img/camisas/camisa 1.jpeg" alt="">
-                            </div>
-                            <div class="my-auto">
-                                <small>titulo</small>
-                                <p>aaaa</p>
-                            </div>
-                            <div class="my-auto">
-                                <small>cantidad</small>
-                                <p>0</p>
-                            </div>
-                            <div class="my-auto">
-                                <small>preio</small>
-                                <p>1000</p>
-                            </div>
-                            <div class="my-auto">
-                                <small>subtotal</small>
-                                <p>0</p>
-                            </div>
-                            <button id="botonEliminar" class="small my-auto"><i id="iconoEliminar" class="bi bi-trash"></i></button>
-                        </div>
-
-                        <div class=" contenedorCarritoDivs d-flex justify-content-between">
-                            <div>
-                                <img id="imgCarrito" style="width: 4rem" src="../img/camisas/camisa 1.jpeg" alt="">
-                            </div>
-                            <div class="my-auto">
-                                <small>titulo</small>
-                                <p>aaaa</p>
-                            </div>
-                            <div class="my-auto">
-                                <small>cantidad</small>
-                                <p>0</p>
-                            </div>
-                            <div class="my-auto">
-                                <small>preio</small>
-                                <p>1000</p>
-                            </div>
-                            <div class="my-auto">
-                                <small>subtotal</small>
-                                <p>0</p>
-                            </div>
-                            <button id="botonEliminar" class="small my-auto"><i id="iconoEliminar" class="bi bi-trash"></i></button>
+                    <p class="textoCarritoVacio">Su carrito esta vacio.</p>
+                    <div id="contenedorCarrito" class=" justify-content-between">
+                        <div id="contenedorProducto" class="d-flex flex-column gap-4 text-center">
+                            
                         </div>
                     </div>
                 </div>
@@ -95,12 +50,28 @@
 
     </footer>
 
+<!-- <img id="imgCarrito" style="width: 4rem" src="../img/camisas/camisa 1.jpeg" alt="">
+                            <div class="my-auto">
+                                <small>titulo</small>
+                                <p>aaaa</p>
+                            </div>
+                            <div class="my-auto">
+                                <small>cantidad</small>
+                                <p>0</p>
+                            </div>
+                            <div class="my-auto">
+                                <small>precio</small>
+                                <p>1000</p>
+                            </div>
+                            <div class="my-auto">
+                                <small>subtotal</small>
+                                <p>0</p>
+                            </div>
+                            <button id="botonEliminar" class="small my-auto"><i id="iconoEliminar" class="bi bi-trash"></i></button> -->
 
 
-
-
-    <script src="./js/arrayProductos.js"></script>
-    <script type="module" src="./js/index.js"></script>
+    <script src="../js/carrito.js"></script>
+    <!-- <script src="./js/index.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
