agregué un contenedor para botones

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <li>
                               <button id="camisas" class="asideBotones">Camisas</button>
                           </li>
-                            <a href="./paginas/carrito.html"><button id="carrito" class="btn btn-success"><i class="bi bi-cart-check"></i>Carrito <span>0</span></button></a>
+                            <a href="./carrito.html"><button id="carrito" class="btn btn-success"><i class="bi bi-cart-check"></i>Carrito</button></a>
                         </ul>
                     </div>
                     <div>
