--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="./paginas/login.html">Login</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
