Cambiando idioma a español

--- a/paginas/signup.html
+++ b/paginas/signup.html
@@ -21,7 +21,7 @@
                     <input id="signup-username" type="text" name="text" class="input" placeholder="Usuario">
                     <input id="signup-email" type="email" name="text" class="input" placeholder="Correo">
                     <input id="signup-password" type="password" name="text" class="input" placeholder="Contraseña">
-                    <button id="signup-btn" class="btn"> Sign Up </button>
+                    <button id="signup-btn" class="btn"> Registrar </button>
                 <hr class="line">
                 <div class="sign-up-goto-container">
                     <p class="login-up-goto">
