Comento tabla que luego sera usada en admin

--- a/paginas/login.html
+++ b/paginas/login.html
@@ -48,7 +48,7 @@
             </div>
         </div>
     </main>
-    <section class="table-container-view">
+    <!-- <section class="table-container-view">
         <h1>Lista de Usuarios</h1>
         <table>
             <thead>
@@ -61,9 +61,9 @@
                 </tr>
             </thead>
             <tbody id="user-list">
-                <!-- Aquí se llenarán los datos de los usuarios desde JavaScript -->
+               
             </tbody>
-    </section>
+    </section> -->
     <script src="../js/login.js"></script>
 </body>
 </html>
