--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -41,14 +41,14 @@
                         <div id="contenedorProducto" class="d-flex flex-column gap-4 text-center">
                             <!-- INSERTADO DESDE JS -->
                         </div>
-                        <div class="contenedorFuncionesCarrito visually-hidden d-flex justify-content-between">
+                        <div class="contenedorFuncionesCarrito d-flex justify-content-between">
                             <div class="my-auto">
-                                <button class="btn btn-danger small ">Vaciar carrito</button>
+                                <button id="vaciarCarrito" class="btn btn-danger small">Vaciar carrito</button>
                             </div>
                             <div class="d-flex mt-3">
                                 <div class="contenedorTotal px-5 ">
                                     <p class="mb-0">Total</p>
-                                    <small>$</small>
+                                    <p id="total">$</p>
                                 </div>
                                 <div class="my-auto divBotonComprar p-2 px-3 my-auto">
                                     <button class="botonComprar btn btn-success">Comprar</button>
