--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/carrito.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 </head>
 <body>
     <header>
@@ -23,10 +27,10 @@
                     <div class="contenedorUl">
                         <ul class="d-flex flex-column gap-4 text-center">
                             <li>
-                                <button id="sacos" class="asideBotones active">Su carrito</button>
+                                <button id="sacos" class="asideBotones active animate__animated animate__backInDown">Su carrito</button>
                             </li>
                             <li>
-                                <button class=" btn btn-warning" id="todos"><a id="volverAlInicio" href="../index.html">Volver al inicio</a></button>
+                                <button class=" btn btn-warning animate__animated animate__backInDown" id="todos"><a id="volverAlInicio" href="../index.html">Volver al inicio</a></button>
                             </li>
                         </ul>
                     </div>
@@ -35,8 +39,8 @@
                     </div>
                 </aside>
                 <div class="contenedorDiv col-9 p-3" id="seccionRopa">
-                    <h2 class="tituloDiv text-center">Carrito</h2>
-                    <p class="textoCarritoVacio fw-bold">Su carrito esta vacio. <i class="bi bi-emoji-frown"></i></p>
+                    <h2 class="tituloDiv text-center animate__animated animate__bounceInLeft">Carrito</h2>
+                    <p class="textoCarritoVacio fw-bold animate__animated animate__bounceInLeft">Su carrito esta vacio. <i class="bi bi-emoji-frown"></i></p>
                     <div id="contenedorCarrito" class=" justify-content-between">
                         <div id="contenedorProducto" class="d-flex flex-column gap-4 text-center">
                             <!-- INSERTADO DESDE JS -->
