las modificaciones fueron para trabajar la parte responsive

--- a/index.html
+++ b/index.html
@@ -54,24 +54,24 @@
     <main id="main" class="mt-5">
         <div class="container-fluid">
             <div class="contenedorGlobal row">
-                <aside class="contenedorAside d-flex flex-column justify-content-between col-3" id="seccionCategorias">
-                    <div class="mt-4">
+                <aside class="contenedorAside d-flex flex-column justify-content-between col-sm-6 col-md-3" id="seccionCategorias">
+                    <div class="divCategoria mt-4">
                         <h1 class="tituloAside text-center fw-bold animate__animated animate__bounceInLeft">Categorías</h1>
                     </div>
                     <div class="contenedorUl">
-                        <ul class="d-flex flex-column gap-4 text-center">
-                            <li>
+                        <ul class="d-flex flex-column gap-4 text-center mx-auto">
+                            <ol>
                                 <button class="fw-bold asideBotones active animate__animated animate__backInDown" id="todos">Todos los productos</button>
-                            </li>
-                            <li>
+                            </ol>
+                            <ol>
                                 <button id="sacos" class="fw-bold asideBotones animate__animated animate__backInDown">Sacos</button>
-                            </li>
-                            <li>
+                            </ol>
+                            <ol>
                                 <button id="pantalones" class="fw-bold asideBotones animate__animated animate__backInDown">Pantalones</button>
-                            </li>
-                            <li>
+                            </ol>
+                            <ol>
                               <button id="camisas" class="fw-bold asideBotones animate__animated animate__backInDown">Camisas</button>
-                          </li>
+                          </ol>
                             <a href="./paginas/carrito.html"><button id="carrito" class="btn btn-success"><i class="bi bi-cart-check"></i>Carrito</button></a>
                         </ul>
                     </div>
@@ -79,7 +79,7 @@
                         <h3>footer</h3>
                     </div>
                 </aside>
-                <div class="contenedorDiv col-9 p-3" id="seccionRopa">
+                <div class="contenedorDiv col-sm-6 col-md-9  p-3" id="seccionRopa">
                     <h2 class="tituloDiv text-center animate__animated animate__bounceInLeft">Sección ropa</h2>
                     <hr class="line animate__animated animate__backInDown">
                     <div class="contenedorCards d-flex flex-wrap justify-content-center gap-5 mt-4">
