--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -20,25 +20,25 @@
     <main>
         <div class="container-fluid">
             <div class="contenedorGlobal row">
-                <aside class="contenedorAside d-flex flex-column justify-content-between col-3" id="seccionCategorias">
+                <aside class="contenedorAside d-flex flex-column justify-content-between col-sm-3" id="seccionCategorias">
                     <div>
-                        <h1 class="tituloAside text-center fw-bold">TiendaShop</h1>
+                        <h1 class="tituloAside text-center fw-bold">Rolling <br>Shop</h1>
                     </div>
                     <div class="contenedorUl">
                         <ul class="d-flex flex-column gap-4 text-center">
-                            <li>
+                            <ol>
                                 <button id="sacos" class="asideBotones active animate__animated animate__backInDown">Su carrito</button>
-                            </li>
-                            <li>
+                            </ol>
+                            <ol>
                                 <button class=" btn btn-warning animate__animated animate__backInDown" id="todos"><a id="volverAlInicio" href="../index.html">Volver al inicio</a></button>
-                            </li>
+                            </ol>
                         </ul>
                     </div>
                     <div>
                         <h3>footer</h3>
                     </div>
                 </aside>
-                <div class="contenedorDiv col-9 p-3" id="seccionRopa">
+                <div class="contenedorDiv col-sm-9 p-3" id="seccionRopa">
                     <h2 class="tituloDiv text-center animate__animated animate__bounceInLeft">Carrito</h2>
                     <p class="textoCarritoVacio fw-bold animate__animated animate__bounceInLeft">Su carrito esta vacio. <i class="bi bi-emoji-frown"></i></p>
                     <div id="contenedorCarrito" class=" justify-content-between">
