todos los cambios modificados fueron para hacer la página responsive

--- a/index.html
+++ b/index.html
@@ -72,11 +72,12 @@
                             <ol>
                               <button id="camisas" class="fw-bold asideBotones animate__animated animate__backInDown">Camisas</button>
                           </ol>
-                            <a href="./paginas/carrito.html"><button id="carrito" class="btn btn-success"><i class="bi bi-cart-check"></i>Carrito</button></a>
+                            <a href="./paginas/carrito.html"><button id="carrito" class="btn btn-success animate__animated animate__backInDown"><i class="bi bi-cart-check"></i>Carrito</button></a>
                         </ul>
                     </div>
                     <div>
-                        <h3>footer</h3>
+                        <h3 class="homero animate__animated animate__backInDown">Que elegancia la de Francia</h3>
+                        <img class="homero animate__animated animate__backInDown" src="./img/homero/que elegancia la de francia.jpeg" style="width: 5rem" alt="homero">
                     </div>
                 </aside>
                 <div class="contenedorDiv col-sm-6 col-md-9  p-3" id="seccionRopa">
