--- a/index.html
+++ b/index.html
@@ -14,42 +14,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar nuevo</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./paginas/login.html">Login</a>
-                  </li>
-                </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-              </div>
-            </div>
-          </nav>
+        
     </header>
     <main id="main" class="mt-5">
         <div class="container-fluid">
@@ -70,8 +35,8 @@
                                 <button id="pantalones" class="fw-bold asideBotones animate__animated animate__backInDown">Pantalones</button>
                             </ol>
                             <ol>
-                              <button id="camisas" class="fw-bold asideBotones animate__animated animate__backInDown">Camisas</button>
-                          </ol>
+                                <button id="camisas" class="fw-bold asideBotones animate__animated animate__backInDown">Camisas</button>
+                            </ol>
                             <a href="./paginas/carrito.html"><button id="carrito" class="btn btn-success animate__animated animate__backInDown"><i class="bi bi-cart-check"></i>Carrito</button></a>
                         </ul>
                     </div>
@@ -81,7 +46,7 @@
                     </div>
                 </aside>
                 <div class="contenedorDiv col-sm-6 col-md-9  p-3" id="seccionRopa">
-                    <h2 class="tituloDiv text-center animate__animated animate__bounceInLeft">Sección ropa</h2>
+                    <h2 class="tituloDiv text-center animate__animated animate__bounceInLeft">ROLLING SHOP</h2>
                     <hr class="line animate__animated animate__backInDown">
                     <div class="contenedorCards d-flex flex-wrap justify-content-center gap-5 mt-4">
                         <!-- IMPORTADO DESDE EL JS -->
