--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -15,7 +15,6 @@
 </head>
 <body>
     <header>
-
     </header>
     <main>
         <div class="container-fluid">
@@ -70,8 +69,7 @@
 
 
 
-    
-    <script src="../js/carrito.js"></script>
+    <script type="module" src="../js/carrito.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
