los cambios realizados fueron para agregarr el footer a las diferentes páginas

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             </div>
         </div>
     </main>
-    <footer>
-
+    <footer class="container-fluid border border-secondary mt-2">
+        
     </footer>
 
     
