los cambios fueron para agregar funcion al buscador

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </footer>
 
     
-
+    <script src="./componentes/navbar.js"></script>
     <script src="./js/carrito.js"></script>
     <script src="./js/arrayProductos.js"></script>
     <script type="module" src="./js/index.js"></script>
