los cambios modificados fueron pequeños detalles para soluionar problemas y agregué una nueva carpeta

--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div class="botonInicioFin mt-4">
-                    <button class="btn btn-warning" id="todos"><a id="volverAlInicio" href="../index.html">Volver al inicio</a></button>
+                    <button class="btn btn-warning" id=""><a id="volverAlInicio" href="../index.html">Volver al inicio</a></button>
                 </div>
             </div>
         </div>
