--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         
     </footer>
 
-    
+    <script src="./js/administrador.js"></script>
     <script src="./componentes/navbar.js"></script>
     <script src="./js/carrito.js"></script>
     <script src="./js/arrayProductos.js"></script>
