--- a/paginas/administrador.html
+++ b/paginas/administrador.html
@@ -14,8 +14,6 @@
   </header>
 
 
-    <h1 class="text-center mt-5 fw-bold animate__animated animate__bounceInLeft">Pagina de administrador</h1>
-    
      <!-- Boton modal -->
       <div class="container mt-5 px-4">
         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#Modal">
@@ -28,7 +26,7 @@
   <div class="modal-dialog">
     <div class="modal-content" id="modalContent">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="ModalLabel">Agregar nuevo producto</h1>
+        <h1 class="modal-title fs-5" id="ModalLabel"  >Agregar nuevo producto</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
 
@@ -45,9 +43,9 @@
               <label for="categoria" class="form-label">Categoria</label>
               <select class="form-select" aria-label="Default select example" id="categoria" >
                 <option value="" disabled selected >Seleccione una opcion</option>
-                <option value="sacos">Sacos</option>
-                <option value="pantalones">Pantalones</option>
-                <option value="camisas">Camisas</option>
+                <option value="Sacos">Sacos</option>
+                <option value="Pantalones">Pantalones</option>
+                <option value="Camisas">Camisas</option>
               </select>
             </div>
             <div class="mb-3">
