--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
         
     </footer>
 
+
+    <!-- <script type="module" src="./js/arrayProductos.js"></script> -->
     <script src="./js/administrador.js"></script>
-    <script src="./componentes/navbar.js"></script>
     <script src="./js/carrito.js"></script>
     <script type="module" src="./js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
