--- a/paginas/administrador.html
+++ b/paginas/administrador.html
@@ -47,9 +47,9 @@
               <select class="form-select" aria-label="Default select example" id="categoria" >
                 <option value="" disabled selected >Seleccione una opcion</option>
 
-                <option value="Sacos">Sacos</option>
-                <option value="Pantalones">Pantalones</option>
-                <option value="Camisas">Camisas</option>
+                <option value="sacos">Sacos</option>
+                <option value="santalones">Pantalones</option>
+                <option value="camisas">Camisas</option>
 
               </select>
             </div>
@@ -99,7 +99,7 @@
   </table>
 </div>
   
-  
+ <script src="./"></script>
   <script src="/js/administrador.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
