los cambios realizados fueron para poder crear la carpeta con la informacion de nosotros

--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -51,7 +51,9 @@
                                     <p id="total">$</p>
                                 </div>
                                 <div class="my-auto divBotonComprar p-2 px-3 my-auto">
-                                    <button class="botonComprar btn btn-success">Comprar</button>
+                                    <a href="../paginas/pagError.html"> 
+                                        <button class="botonComprar btn btn-success">Comprar</button>
+                                    </a>
                                 </div>
                             </div>
                         </div>
