--- a/paginas/signup.html
+++ b/paginas/signup.html
@@ -8,6 +8,16 @@
 </head>
 <body>
     <main class="main-container">
+        <div id="login-boton-container">
+            <a style="text-decoration: none; color: #000;" href="../index.html">
+                <button class="signupBtn">
+                        Volver al inicio
+                        <span class="arrow">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 320 512" fill="rgb(183, 128, 255)"><path d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"></path></svg>
+                        </span>
+                    </button>
+                </a>
+        </div>
         <div class="login-container">
             <div class="login-in-box-second image-container">
                 <img class="login-image" src="../img/assets/fashion_img_signup.png" alt="Fashion">
