--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
 
 
     <!-- <script type="module" src="./js/arrayProductos.js"></script> -->
+    <script src="./componentes/navbar.js"></script>
+    <script src="./componentes/footer.js"></script>
     <script src="./js/administrador.js"></script>
     <script src="./js/carrito.js"></script>
     <script type="module" src="./js/index.js"></script>
