--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -67,8 +67,9 @@
 
     </footer>
 
-
-
+   <script src="/componentes/navbar.js"></script>
+    <script src="/componentes/footer.js"></script>
+    <script type="module" src="./componentes/navbar.js"></script>
     <script type="module" src="../js/carrito.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
