--- a/paginas/pagError.html
+++ b/paginas/pagError.html
@@ -20,6 +20,7 @@
 
     </footer>
 
+    <script src="/componentes/footer.js"></script>
     <script src="../componentes/navbar.js"></script>
     <script type="module" src="../js/pagError.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
