--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="/css/detalle.css">
 </head>
 <body>
     <header>
@@ -46,7 +47,7 @@
                     </div>
                 </aside>
                 <div class="contenedorDiv col-sm-6 col-md-9  p-3" id="seccionRopa">
-                    <h2 class="tituloDiv text-center animate__animated animate__bounceInLeft">ROLLING SHOP</h2>
+                    <h2 class="tituloDiv text-center animate__animated animate__bounceInLeft">CATALOGO</h2>
                     <hr class="line animate__animated animate__backInDown">
                     <div id="contendorBuscador">
                         <form id="buscador" class=" animate__animated animate__backInDown justify-content-end">
@@ -76,7 +77,7 @@
     </footer>
 
 
-    
+    <script src="/js/detalle.js"></script>
     <script type="module" src="./js/arrayProductos.js"></script>
     <script src="./componentes/navbar.js"></script>
     <script src="./componentes/footer.js"></script>
