--- a/paginas/administrador.html
+++ b/paginas/administrador.html
@@ -53,7 +53,7 @@
                       <option value="" disabled selected >Seleccione una opcion</option>
 
                       <option value="sacos">Sacos</option>
-                      <option value="santalones">Pantalones</option>
+                      <option value="pantalones">Pantalones</option>
                       <option value="camisas">Camisas</option>
 
                     </select>
@@ -149,7 +149,7 @@
         </div>
       </div>
    </main>
-  <footer>
+  <footer class="container-fluid">
 
   </footer>
 
