--- a/paginas/pagError.html
+++ b/paginas/pagError.html
@@ -16,7 +16,7 @@
     <main class="main d-flex flex-column justify-content-center align-items-center">
 
     </main>
-    <footer>
+    <footer class="container-fluid">
 
     </footer>
 
