Agrego el juicio 1

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <main id="main" class="mt-5">
         <div class="container-fluid">
-            
+            <div 
             <div class="contenedorGlobal row">
                 <aside class="contenedorAside d-flex flex-column justify-content-between col-sm-6 col-md-3" id="seccionCategorias">
                     <div class="divCategoria mt-4">
@@ -42,7 +42,7 @@
                         </ul>
                     </div>
                     <div>
-                        <h3 class="homero animate__animated animate__backInDown">Que elegancia la de Francia</h3>
+                        <h3 class="homero animate__animated animate__backInDown">Que elegancia la de Hugo</h3>
                         <img class="homero animate__animated animate__backInDown" src="./img/homero/que elegancia la de francia.jpeg" style="width: 5rem" alt="homero">
                     </div>
                 </aside>
